adjusted responsive measurements

--- a/index.html
+++ b/index.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap" rel="stylesheet">
   <title>FRONTENDMENTOR-interactive-rating-component-mobile-first</title>
 </head>
+
 <body>
-  
+  <div class="container">
+    <i><img src="images/icon-star.svg" alt="star icon" class="star-icon"></i>
+    <h1 class="h1-how-did-we-do">How did we do?</h1>
+    <p class="p-please-let-us">Please let us know how we did with your support request. All feedback is appreciated to
+      help us improve our
+      offering!</p>
+    <div class="container-ordered-list-div">
+      <ol class="container-ordered-list">
+        <li class="list-items">1</li>
+        <li class="list-items">2</li>
+        <li class="list-items">3</li>
+        <li class="list-items">4</li>
+        <li class="list-items">5</li>
+      </ol>
+    </div>
+    <button class="button-submit">S U B M I T</button>
+  </div>
+
+
+  <script src="main.js"></script>
 </body>
+
 </html>
